--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Chuyên Laptop, PC, phụ kiện Gaming</title>
     <link
       rel="icon"
       href="https://file.hstatic.net/1000026716/file/favicon_0db2583fad1443e482491c7db08765e6.png"
@@ -15,7 +16,7 @@
       integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
       crossorigin="anonymous"
     ></script>
-    <title>Chuyên Laptop, PC, phụ kiện Gaming</title>
+
     <!-- CSS only -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css"
@@ -36,7 +37,7 @@
           <div class="row">
             <div class="col-2">
               <div class="logo__shop">
-                <a href="" class="logo__shop-link">
+                <a href="./index.html" class="logo__shop-link">
                   <img
                     src="//theme.hstatic.net/1000026716/1000440777/14/logo.svg?v=28697"
                     alt=""
@@ -62,10 +63,12 @@
                   <div class="col-6">
                     <div class="row action__info-user">
                       <div class="col">
-                        <a href=""><i class="bx bxs-edit"></i>Đăng ký</a>
+                        <a href="./signup.html"
+                          ><i class="bx bxs-edit"></i>Đăng ký</a
+                        >
                       </div>
                       <div class="col">
-                        <a href=""
+                        <a href="./login.html"
                           ><i class="bx bxs-user-circle"></i>Đăng nhập</a
                         >
                       </div>
@@ -119,7 +122,7 @@
               <div class="row">
                 <div class="col">
                   <div class="col-container">
-                    <a href=""
+                    <a href="./guidepayment.html"
                       ><i class="bx bx-money-withdraw"></i>HƯỚNG DẪN THANH
                       TOÁN</a
                     >
@@ -127,19 +130,21 @@
                 </div>
                 <div class="col">
                   <div class="col-container">
-                    <a href=""><i class="bx bxs-bank"></i>HƯỚNG DẪN TRẢ GÓP</a>
+                    <a href="installment.html"
+                      ><i class="bx bxs-bank"></i>HƯỚNG DẪN TRẢ GÓP</a
+                    >
                   </div>
                 </div>
                 <div class="col">
                   <div class="col-container">
-                    <a href=""
+                    <a href="warranty.html"
                       ><i class="bx bx-check-shield"></i>CHÍNH SÁCH BẢO HÀNH</a
                     >
                   </div>
                 </div>
                 <div class="col">
                   <div class="col-container">
-                    <a href=""
+                    <a href="delivery.html"
                       ><i class="bx bxs-package"></i>CHÍNH SÁCH VẬN CHUYỂN</a
                     >
                   </div>
@@ -158,7 +163,7 @@
             <ul class="list_menu">
               <li class="list_menu-item">
                 <i class="bx bx-laptop"></i>
-                <a href="">Laptop</a>
+                <a href="./product_laptop.html">Laptop</a>
               </li>
               <li class="list_menu-item">
                 <i class="bx bx-laptop"></i>
@@ -938,7 +943,7 @@
       </div>
     </div>
     <!-- END LIST BÀN PHÍM -->
-    <div class="product__list">
+    <div class="product__list" style="padding-bottom: 60px">
       <div class="container">
         <div class="row fixed_row">
           <div class="product__list-heading">
@@ -1135,6 +1140,7 @@
         </div>
       </div>
     </footer>
+    <!-- End Footer -->
   </body>
   <script src="script.js"></script>
 </html>
