--- a/index.html
+++ b/index.html
@@ -346,7 +346,9 @@
                 <div class="product_card">
                   <div class="best_seller">Best Seller</div>
                   <div class="product_card-image">
-                    <a href=""><img src="./images/product-1.png" alt="" /></a>
+                    <a href="./product_detail.html"
+                      ><img src="./images/product-1.png" alt=""
+                    /></a>
                     <div class="product_detail">
                       <p>Click để xem chi tiết</p>
                       <button>Đặt hàng</button>
