New Delivery Page

--- a/admin/product/add_product.html
+++ b/admin/product/add_product.html
@@ -275,7 +275,13 @@
                 </tr>
                 <tr>
                   <td>Màn hình</td>
-                  <td><input type="text" placeholder="Name" /></td>
+                  <td>
+                    <input
+                      type="text"
+                      placeholder="Name"
+                      class="reset_padding"
+                    />
+                  </td>
                   <td>Hệ điều hành</td>
                   <td>
                     <select name="OS" id="">
@@ -299,7 +305,13 @@
                 </tr>
                 <tr>
                   <td>Bàn phím</td>
-                  <td><input type="text" placeholder="Name" /></td>
+                  <td>
+                    <input
+                      type="text"
+                      placeholder="Name"
+                      class="reset_padding"
+                    />
+                  </td>
                   <td>Pin</td>
                   <td>
                     <select name="Pin" id="">
@@ -309,13 +321,21 @@
                 </tr>
                 <tr>
                   <td>Kích thước</td>
-                  <td><input type="text" placeholder="Name" /></td>
+                  <td>
+                    <input
+                      type="text"
+                      placeholder="Name"
+                      class="reset_padding"
+                    />
+                  </td>
                   <td>Trọng lượng</td>
-                  <td><input type="text" placeholder="KG" /></td>
+                  <td>
+                    <input type="text" placeholder="KG" class="reset_padding" />
+                  </td>
                 </tr>
                 <tr>
                   <td>Bảo hành</td>
-                  <td><input type="date" /></td>
+                  <td><input type="date" class="reset_padding" /></td>
                 </tr>
               </table>
             </div>
