New Order and Checkout

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                         <a href=""><i class="bx bxs-discount"></i>Khuyến mãi</a>
                       </div>
                       <div class="col">
-                        <a href=""
+                        <a href="./cart.html"
                           ><i class="bx bxs-cart"
                             ><div class="number_product">0</div></i
                           >Giỏ hàng</a
