--- a/index.html
+++ b/index.html
@@ -558,6 +558,19 @@
               </div>
             </div>
           </div>
+          <div class="row pagination text-center">
+            <ul class="pagination_list">
+              <li>
+                <a href=""><i class="bx bx-chevron-left"></i></a>
+              </li>
+              <li><a href="">1</a></li>
+              <li><a href="">2</a></li>
+              <li><a href="">3</a></li>
+              <li>
+                <a href=""><i class="bx bx-chevron-right"></i></a>
+              </li>
+            </ul>
+          </div>
         </div>
       </div>
     </div>
