--- a/product_detail.html
+++ b/product_detail.html
@@ -30,6 +30,21 @@
     />
   </head>
   <body>
+    <div class="header_responsive">
+      <div class="container">
+        <div class="row">
+          <div class="logo__shop">
+            <a href="./index.html" class="logo__shop-link">
+              <img
+                src="//theme.hstatic.net/1000026716/1000440777/14/logo.svg?v=28697"
+                alt=""
+                class="logo__shop-link--image"
+              />
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
     <div class="header_navigation sticky-top">
       <header>
         <div class="container">
@@ -167,7 +182,35 @@
               <div class="image_product_big">
                 <img src="./images/product_lenovo_1.png" alt="" />
               </div>
-              <div class="multiple-items"></div>
+              <div class="multiple-items">
+                <div class="image-item active">
+                  <img src="./images/product_lenovo_1.png" alt="" />
+                </div>
+                <div class="image-item">
+                  <img
+                    src="https://cdn.tgdd.vn/Products/Images/44/269607/lenovo-gaming-legion-5-15ach6-r7-82jw00kmvn-2-1.jpg"
+                    alt=""
+                  />
+                </div>
+                <div class="image-item">
+                  <img
+                    src="https://cdn.tgdd.vn/Products/Images/44/269607/lenovo-gaming-legion-5-15ach6-r7-82jw00kmvn-4-1.jpg"
+                    alt=""
+                  />
+                </div>
+                <div class="image-item">
+                  <img
+                    src="https://cdn.tgdd.vn/Products/Images/44/269607/lenovo-gaming-legion-5-15ach6-r7-82jw00kmvn-13.jpg"
+                    alt=""
+                  />
+                </div>
+                <div class="image-item">
+                  <img
+                    src="https://cdn.tgdd.vn/Products/Images/44/269607/lenovo-gaming-legion-5-15ach6-r7-82jw00kmvn-14.jpg"
+                    alt=""
+                  />
+                </div>
+              </div>
             </div>
             <div class="col product_detail_infoAction">
               <div class="product_detail_price">
@@ -345,5 +388,6 @@
       </div>
     </footer>
     <!-- End Footer-->
+    <script src="./main.js"></script>
   </body>
 </html>
