--- a/admin/customer/customer.html
+++ b/admin/customer/customer.html
@@ -42,8 +42,10 @@
           </div>
           <ul class="sub-menu">
             <li><a class="link_name" href="#">Products</a></li>
-            <li><a href="../product/add_product.html">Add product</a></li>
-            <li><a href="../product/list_product.html">Product list</a></li>
+            <li><a href="../product/menu_add.html">Create product</a></li>
+            <li>
+              <a href="../product/menu_product.html">Product management</a>
+            </li>
           </ul>
         </li>
         <li>
