--- a/admin/product/add/add_chair.html
+++ b/admin/product/add/add_chair.html
@@ -17,7 +17,7 @@
       type="image/x-icon"
     />
     <!-- css link -->
-    <link rel="stylesheet" href="../admin_style.css" />
+    <link rel="stylesheet" href="../../admin_style.css" />
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
@@ -40,7 +40,7 @@
       </div>
       <ul class="nav-links">
         <li>
-          <a href="../admin_page.html">
+          <a href="../../admin_page.html">
             <i class="bx bx-grid-alt"></i>
             <span class="link_name">Dashboard</span>
           </a>
@@ -55,54 +55,54 @@
           </div>
           <ul class="sub-menu">
             <li><a class="link_name" href="#">Products</a></li>
-            <li><a href="../product/menu_add.html">Create product</a></li>
-            <li>
-              <a href="../product/menu_product.html">Product management</a>
-            </li>
+            <li><a href="../menu_add.html">Create product</a></li>
+            <li><a href="../menu_product.html">Product management</a></li>
           </ul>
         </li>
         <li>
-          <a href="./order_list.html">
+          <a href="../../order/order_list.html">
             <i class="bx bxs-cart-alt"></i>
             <span class="link_name">Orders</span>
           </a>
           <ul class="sub-menu blank">
             <li>
-              <a class="link_name" href="./order_list.html">Orders</a>
+              <a class="link_name" href="../../order/order_list.html">Orders</a>
             </li>
           </ul>
         </li>
         <li>
-          <a href="../customer/customer.html">
+          <a href="../../customer/customer.html">
             <i class="bx bxs-user"></i>
             <span class="link_name">Customer</span>
           </a>
           <ul class="sub-menu blank">
             <li>
-              <a class="link_name" href="../customer/customer.html">Customer</a>
+              <a class="link_name" href="../../customer/customer.html"
+                >Customer</a
+              >
             </li>
           </ul>
         </li>
         <li>
-          <a href="../statistic/statistic.html">
+          <a href="../../statistic/statistic.html">
             <i class="bx bx-pie-chart-alt-2"></i>
             <span class="link_name">Statistic</span>
           </a>
           <ul class="sub-menu blank">
             <li>
-              <a class="link_name" href="../statistic/statistic.html"
+              <a class="link_name" href="../../statistic/statistic.html"
                 >Statistic</a
               >
             </li>
           </ul>
         </li>
         <li>
-          <a href="../setting.html">
+          <a href="../../setting.html">
             <i class="bx bx-cog"></i>
             <span class="link_name">Setting</span>
           </a>
           <ul class="sub-menu blank">
-            <li><a class="link_name" href="../setting.html">Setting</a></li>
+            <li><a class="link_name" href="../../setting.html">Setting</a></li>
           </ul>
         </li>
         <li>
@@ -122,38 +122,79 @@
     <section class="home-section">
       <div class="home-content">
         <i class="bx bx-menu"></i>
-        <span class="text">Danh sách đơn hàng</span>
+        <span class="text">Tạo ghế gaming</span>
       </div>
-      <div class="home_list_orders">
-        <table class="table table-striped">
-          <thead>
-            <tr>
-              <th scope="col">ID</th>
-              <th scope="col">Image</th>
-              <th scope="col">Product name</th>
-              <th scope="col">Gender</th>
-              <th scope="col">Price</th>
-              <th scope="col">Categories</th>
-              <th scope="col">Status</th>
-              <th scope="col">Action</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td></td>
-              <td><img src="" /></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td>
-                <a href=""><i class="fas fa-edit"></i> Edit</a>
-                <a href=""><i class="fas fa-trash-alt"></i> Delete</a>
-              </td>
-            </tr>
-          </tbody>
-        </table>
+      <div class="add_product_section">
+        <form action="">
+          <div class="row add_product_part">
+            <div class="col-5 add_product_info_title">
+              <p>1. Thông tin cơ bản</p>
+            </div>
+            <div class="col-7 add_product_info_input">
+              <p>Tên sản phẩm</p>
+              <input type="text" placeholder="Name" />
+
+              <p>Mô tả</p>
+              <textarea name="" id="" cols="45" rows="6"></textarea>
+            </div>
+          </div>
+          <div class="row add_product_part">
+            <div class="col-5 add_product_info_title">
+              <p>2. Giá tiền</p>
+            </div>
+            <div class="col-7 add_product_info_input">
+              <p>Giá</p>
+              <input type="text" placeholder="Name" />
+              <p>Khuyến mãi</p>
+              <input type="number" placeholder="%" />
+            </div>
+          </div>
+          <div class="row add_product_part">
+            <div class="col-5 add_product_info_title">
+              <p>3. Phân loại</p>
+            </div>
+            <div class="col-7">
+              <p>Nhãn hiệu</p>
+              <select name="" id="">
+                <option value="">Warrior</option>
+                <option value="">MSI</option>
+                <option value="">Asus</option>
+                <option value="">Cougar</option>
+              </select>
+            </div>
+          </div>
+          <div class="row add_product_part part_4">
+            <div class="add_product_info_title">
+              <p>4. Mô tả chi tiết</p>
+            </div>
+            <div class="add_product_info_input">
+              <table>
+                <tr>
+                  <td>Bảo hành</td>
+                  <td><input type="date" class="reset_padding" /></td>
+                </tr>
+              </table>
+            </div>
+          </div>
+          <div class="row add_product_part">
+            <div class="col-5 add_product_info_title">
+              <p>5. Media</p>
+            </div>
+            <div class="col-7 add_product_info_input">
+              <p>Thêm hình ảnh</p>
+              <input type="file" placeholder="Name" />
+              <p>Ngày tạo sản phẩm</p>
+              <input type="date" />
+            </div>
+          </div>
+          <div class="row add_product_part">
+            <div class="col-5 add_product_info_title"></div>
+            <div class="col-7 add_product_info_input">
+              <button type="reset">CANCEL</button>
+              <button type="submit">Tạo sản phẩm</button>
+            </div>
+          </div>
+        </form>
       </div>
     </section>
     <script>
