--- a/admin/product/add/add_mouse.html
+++ b/admin/product/add/add_mouse.html
@@ -17,7 +17,7 @@
       type="image/x-icon"
     />
     <!-- css link -->
-    <link rel="stylesheet" href="../admin_style.css" />
+    <link rel="stylesheet" href="../../admin_style.css" />
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
@@ -40,7 +40,7 @@
       </div>
       <ul class="nav-links">
         <li>
-          <a href="../admin_page.html">
+          <a href="../../admin_page.html">
             <i class="bx bx-grid-alt"></i>
             <span class="link_name">Dashboard</span>
           </a>
@@ -55,52 +55,54 @@
           </div>
           <ul class="sub-menu">
             <li><a class="link_name" href="#">Products</a></li>
-            <li><a href="./add_product.html">Add product</a></li>
-            <li><a href="./list_product.html">Product list</a></li>
+            <li><a href="../menu_add.html">Create product</a></li>
+            <li><a href="../menu_product.html">Product management</a></li>
           </ul>
         </li>
         <li>
-          <a href="../order/order_list.html">
+          <a href="../../order/order_list.html">
             <i class="bx bxs-cart-alt"></i>
             <span class="link_name">Orders</span>
           </a>
           <ul class="sub-menu blank">
             <li>
-              <a class="link_name" href="../order/order_list.html">Orders</a>
+              <a class="link_name" href="../../order/order_list.html">Orders</a>
             </li>
           </ul>
         </li>
         <li>
-          <a href="../customer/customer.html">
+          <a href="../../customer/customer.html">
             <i class="bx bxs-user"></i>
             <span class="link_name">Customer</span>
           </a>
           <ul class="sub-menu blank">
             <li>
-              <a class="link_name" href="../customer/customer.html">Customer</a>
+              <a class="link_name" href="../../customer/customer.html"
+                >Customer</a
+              >
             </li>
           </ul>
         </li>
         <li>
-          <a href="../statistic/statistic.html">
+          <a href="../../statistic/statistic.html">
             <i class="bx bx-pie-chart-alt-2"></i>
             <span class="link_name">Statistic</span>
           </a>
           <ul class="sub-menu blank">
             <li>
-              <a class="link_name" href="../statistic/statistic.html"
+              <a class="link_name" href="../../statistic/statistic.html"
                 >Statistic</a
               >
             </li>
           </ul>
         </li>
         <li>
-          <a href="../setting.html">
+          <a href="../../setting.html">
             <i class="bx bx-cog"></i>
             <span class="link_name">Setting</span>
           </a>
           <ul class="sub-menu blank">
-            <li><a class="link_name" href="../setting.html">Setting</a></li>
+            <li><a class="link_name" href="../../setting.html">Setting</a></li>
           </ul>
         </li>
         <li>
@@ -120,7 +122,7 @@
     <section class="home-section">
       <div class="home-content">
         <i class="bx bx-menu"></i>
-        <span class="text">Thêm sản phẩm</span>
+        <span class="text">Tạo chuột máy tính</span>
       </div>
       <div class="add_product_section">
         <form action="">
@@ -152,89 +154,13 @@
               <p>3. Phân loại</p>
             </div>
             <div class="col-7">
-              <div class="catergory_radiobtn">
-                <div class="row">
-                  <div class="col">
-                    <input
-                      type="radio"
-                      name="category"
-                      id=""
-                      value="Laptop"
-                    />Laptop
-                  </div>
-                  <div class="col">
-                    <input
-                      type="radio"
-                      name="category"
-                      id=""
-                      value="Laptop"
-                    />PC
-                  </div>
-                </div>
-                <div class="row">
-                  <div class="col">
-                    <input
-                      type="radio"
-                      name="category"
-                      id=""
-                      value="Laptop"
-                    />Màn hình
-                  </div>
-                  <div class="col">
-                    <input
-                      type="radio"
-                      name="category"
-                      id=""
-                      value="Laptop"
-                    />Linh kiện
-                  </div>
-                </div>
-                <div class="row">
-                  <div class="col">
-                    <input
-                      type="radio"
-                      name="category"
-                      id=""
-                      value="Laptop"
-                    />Gaming Gear
-                  </div>
-                  <div class="col">
-                    <input
-                      type="radio"
-                      name="category"
-                      id=""
-                      value="Laptop"
-                    />Phụ kiện
-                  </div>
-                </div>
-
-                <div class="row">
-                  <div class="col">
-                    <input
-                      type="radio"
-                      name="category"
-                      id=""
-                      value="Laptop"
-                    />Apple
-                  </div>
-                  <div class="col">
-                    <input
-                      type="radio"
-                      name="category"
-                      id=""
-                      value="Laptop"
-                    />Gear Corner
-                  </div>
-                </div>
-              </div>
               <p>Nhãn hiệu</p>
               <select name="" id="">
-                <option value="">Acer</option>
-                <option value="">Asus</option>
+                <option value="">Logitech</option>
+                <option value="">Razer</option>
                 <option value="">MSI</option>
-                <option value="">Lenovo</option>
-                <option value="">Dell</option>
-                <option value="">HP</option>
+                <option value="">Steelseries</option>
+                <option value="">Rapoo</option>
                 <option value="">Apple</option>
               </select>
             </div>
@@ -246,93 +172,39 @@
             <div class="add_product_info_input">
               <table>
                 <tr>
-                  <td>CPU</td>
+                  <td>Kết nối</td>
                   <td>
-                    <select name="CPU" id="">
-                      <option value="">Intel core I5</option>
+                    <select name="" id="">
+                      <option value="">Có dây</option>
+                      <option value="">Không dây</option>
                     </select>
                   </td>
-                  <td>Card đồ họa</td>
+                  <td>Led</td>
                   <td>
-                    <select name="VGA" id="">
-                      <option value="">RTX 2060</option>
-                    </select>
-                  </td>
-                </tr>
-                <tr>
-                  <td>Bộ nhớ RAM</td>
-                  <td>
-                    <select name="RAM" id="">
-                      <option value="">8GB</option>
-                    </select>
-                  </td>
-                  <td>Ổ cứng SSD</td>
-                  <td>
-                    <select name="CPU" id="">
-                      <option value="">Intel core I5</option>
+                    <select name="" id="">
+                      <option value="">Chiếu sáng RGB 8 vùng</option>
                     </select>
                   </td>
                 </tr>
                 <tr>
-                  <td>Màn hình</td>
-                  <td>
-                    <input
-                      type="text"
-                      placeholder="Name"
-                      class="reset_padding"
-                    />
-                  </td>
-                  <td>Hệ điều hành</td>
-                  <td>
-                    <select name="OS" id="">
-                      <option value="">Windows 11</option>
-                    </select>
-                  </td>
-                </tr>
-                <tr>
-                  <td>LAN</td>
-                  <td>
-                    <select name="LAN" id="">
-                      <option value="">LAN</option>
-                    </select>
-                  </td>
-                  <td>Cổng kết nối</td>
-                  <td>
-                    <select name="InputType" id="">
-                      <option value="">Input type</option>
-                    </select>
-                  </td>
-                </tr>
-                <tr>
-                  <td>Bàn phím</td>
-                  <td>
-                    <input
-                      type="text"
-                      placeholder="Name"
-                      class="reset_padding"
-                    />
-                  </td>
                   <td>Pin</td>
                   <td>
-                    <select name="Pin" id="">
-                      <option value="">6 cells 80Hw</option>
-                    </select>
-                  </td>
-                </tr>
-                <tr>
-                  <td>Kích thước</td>
-                  <td>
                     <input
                       type="text"
                       placeholder="Name"
                       class="reset_padding"
+                      style="margin-bottom: 0px"
                     />
                   </td>
                   <td>Trọng lượng</td>
                   <td>
-                    <input type="text" placeholder="KG" class="reset_padding" />
+                    <select name="" id="">
+                      <option value="">106 g</option>
+                      <option value="">96 g</option>
+                    </select>
                   </td>
                 </tr>
+
                 <tr>
                   <td>Bảo hành</td>
                   <td><input type="date" class="reset_padding" /></td>
