--- a/admin/statistic/statistic.html
+++ b/admin/statistic/statistic.html
@@ -18,6 +18,20 @@
     />
     <!-- css link -->
     <link rel="stylesheet" href="../admin_style.css" />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
+      crossorigin="anonymous"
+    ></script>
+
+    <!-- CSS only -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT"
+      crossorigin="anonymous"
+    />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
   </head>
   <body>
     <div class="sidebar close">
@@ -104,12 +118,86 @@
         </li>
       </ul>
     </div>
-    <section class="home-section">
+    <section class="home-section" style="height: 100vh">
       <div class="home-content">
         <i class="bx bx-menu"></i>
         <span class="text">Thống kê doanh số bán hàng</span>
       </div>
+      <div class="statistic_section">
+        <div class="row py-2">
+          <div class="col-md-6">
+            <div class="total_revenue_section">
+              <h4>Tổng doanh thu</h4>
+              <div class="value_info text-center">
+                <p class="value"><span>50%</span></p>
+                <p class="value_statement">Total sales made today</p>
+                <p class="value_money"><span>50.000.000</span>Đ</p>
+                <p class="value_description">
+                  Previous transaction processing. Last payments may not be
+                  included
+                </p>
+              </div>
+              <div class="row text-center">
+                <div class="col">
+                  <h4 class="target_info">Target</h4>
+                  <p
+                    class="text-info"
+                    style="font-weight: 500; font-size: 20px"
+                  >
+                    100.000.000đ
+                  </p>
+                </div>
+                <div class="col">
+                  <h4 class="target_info">Last week</h4>
+                  <p
+                    class="text-success"
+                    style="font-weight: 500; font-size: 20px"
+                  >
+                    120.000.000đ
+                  </p>
+                </div>
+                <div class="col">
+                  <h4 class="target_info">Last month</h4>
+                  <p
+                    class="text-danger"
+                    style="font-weight: 500; font-size: 20px"
+                  >
+                    80.000.000đ
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 d-flex align-items-center">
+            <canvas id="statisChart" style="width: 100%"></canvas>
+          </div>
+        </div>
+      </div>
     </section>
+    <script>
+      var xValues = ["PC", "Laptop", "Chuột", "Bàn phím", "Màn hình"];
+      var yValues = [55, 49, 44, 24, 15];
+      var barColors = ["#b91d47", "#00aba9", "#2b5797", "#e8c3b9", "#1e7145"];
+
+      new Chart("statisChart", {
+        type: "pie",
+        data: {
+          labels: xValues,
+          datasets: [
+            {
+              backgroundColor: barColors,
+              data: yValues,
+            },
+          ],
+        },
+        options: {
+          title: {
+            display: true,
+            text: "Thống kê số lượng sản phẩm đã bán",
+          },
+        },
+      });
+    </script>
     <script>
       let arrow = document.querySelectorAll(".arrow");
       for (var i = 0; i < arrow.length; i++) {
