--- a/checkout.html
+++ b/checkout.html
@@ -82,14 +82,24 @@
               </div>
               <div class="row mt-2">
                 <div class="col">
-                  <select class="form-control">
+                  <select class="form-control form-select" id="city">
                     <option>Chọn tỉnh thành</option>
+                  </select>
+                </div>
+                <div class="col">
+                  <select class="form-control form-select" id="district">
+                    <option>Chọn quận huyện</option>
+                  </select>
+                </div>
+                <div class="col">
+                  <select class="form-control form-select" id="ward">
+                    <option>Chọn phường xã</option>
                   </select>
                 </div>
               </div>
               <div class="row mt-2">
                 <div class="col">
-                  <select class="form-control">
+                  <select class="form-control form-select">
                     <option>Chọn phương thức thanh toán</option>
                   </select>
                 </div>
@@ -178,4 +188,52 @@
     </div>
   </body>
   <script src="script.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js"></script>
+  <script>
+    var citis = document.getElementById("city");
+    var districts = document.getElementById("district");
+    var wards = document.getElementById("ward");
+    var Parameter = {
+      url: "https://raw.githubusercontent.com/kenzouno1/DiaGioiHanhChinhVN/master/data.json",
+      method: "GET",
+      responseType: "application/json",
+    };
+    var promise = axios(Parameter);
+    promise.then(function (result) {
+      renderCity(result.data);
+    });
+
+    function renderCity(data) {
+      for (const x of data) {
+        citis.options[citis.options.length] = new Option(x.Name, x.Id);
+      }
+      citis.onchange = function () {
+        district.length = 1;
+        ward.length = 1;
+        if (this.value != "") {
+          const result = data.filter((n) => n.Id === this.value);
+
+          for (const k of result[0].Districts) {
+            district.options[district.options.length] = new Option(
+              k.Name,
+              k.Id
+            );
+          }
+        }
+      };
+      district.onchange = function () {
+        ward.length = 1;
+        const dataCity = data.filter((n) => n.Id === citis.value);
+        if (this.value != "") {
+          const dataWards = dataCity[0].Districts.filter(
+            (n) => n.Id === this.value
+          )[0].Wards;
+
+          for (const w of dataWards) {
+            wards.options[wards.options.length] = new Option(w.Name, w.Id);
+          }
+        }
+      };
+    }
+  </script>
 </html>
